<resources>
    <string name="app_name">AstroTime</string>
    <string name="menu">Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="condition">Condition</string>
    <string name="temperature">Temperature</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="air_pressure">Air pressure</string>
</resources>
