<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>

        <!--<variable-->
            <!--name="moon"-->
            <!--type="com.example.krzysiek.astro.Moon"/>-->
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/weatherIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/f44" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/weatherIconImageView"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:text="@string/temperature"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/conditionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperatureTextView"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/condition" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="22dp"
            android:text="@string/location"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/yahoo_logo" />

        <TextView
            android:id="@+id/airPressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView6"
            android:layout_toLeftOf="@+id/conditionTextView"
            android:layout_toStartOf="@+id/conditionTextView"
            android:text="@string/air_pressure" />

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/airPressureTextView"
            android:layout_alignStart="@+id/airPressureTextView"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/latitudeTextView"
            android:layout_alignStart="@+id/latitudeTextView"
            android:layout_alignTop="@+id/textView8"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/locationTextView"
            android:layout_alignStart="@+id/locationTextView"
            android:layout_below="@+id/conditionTextView"
            android:layout_marginTop="13dp"
            android:text="@string/air_pressure"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="43dp"
            android:text="@string/latitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/locationTextView"
            android:layout_alignStart="@+id/locationTextView"
            android:layout_below="@+id/textView7"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="32dp"
            android:text="@string/longitude"
            android:textSize="18sp" />

    </RelativeLayout>

</layout>