<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>

        <!--<variable-->
        <!--name="moon"-->
        <!--type="com.example.krzysiek.astro.Moon"/>-->
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/imageView"
            android:layout_marginTop="34dp"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/conditionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/temperatureTextView"
            android:layout_alignBottom="@+id/temperatureTextView"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:text="Temperature" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/yahoo_logo" />

        <TextView
            android:id="@+id/airPressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/temperatureTextView"
            android:layout_alignRight="@+id/temperatureTextView"
            android:layout_below="@+id/temperatureTextView"
            android:layout_marginTop="42dp"
            android:text="@string/air_pressure" />

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView8"
            android:layout_alignLeft="@+id/longitudeTextView"
            android:layout_alignStart="@+id/longitudeTextView"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignEnd="@+id/airPressureTextView"
            android:layout_alignRight="@+id/airPressureTextView"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/airPressureTextView"
            android:layout_alignLeft="@+id/conditionTextView"
            android:layout_alignStart="@+id/conditionTextView"
            android:text="@string/air_pressure"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="43dp"
            android:text="@string/latitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/locationTextView"
            android:layout_alignStart="@+id/locationTextView"
            android:layout_below="@+id/textView7"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="32dp"
            android:text="@string/longitude"
            android:textSize="18sp" />

    </RelativeLayout>

</layout>